cmake_minimum_required(VERSION 3.15.0)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_BUILD_TYPE Debug)

#project
set(PROJECT Leetcode)
project(${PROJECT})

add_executable(${PROJECT}
    ./source/1004_MaxConsecutiveOnesIII.cpp
    ./source/1010_PairsofSongsWithTotalDurationsDivisibleby60.cpp
    ./source/1015_SmallestIntegerDivisiblebyK.cpp
    ./source/1018_BinaryPrefixDivisibleBy5.cpp
    ./source/1026_MaxDiffNodeAncestor.cpp
    ./source/1060_MissingElementinSortedArray.cpp
    ./source/1063_NumberofValidSubarrays.cpp
    ./source/1099_TwoSumLessThanK.cpp
    ./source/1104_PathInZigzagLabelledBinaryTree.cpp
    ./source/1110_DeleteNodesAndReturnForest.cpp
    ./source/1138_AlphabetBoardPath.cpp
    ./source/117_PopulatingNextRightPointersinEachNodeII.cpp
    ./source/1184_DistanceBetweenBusStops.cpp
    ./source/11_ContainerWithMostWater.cpp
    ./source/121_BestTimeToBuyAndSelStock.cpp
    ./source/1228_MissingNumberInArithmeticProgression.cpp
    ./source/122_BestTimeToBuyAndSellStockII.cpp
    ./source/1247_MinimumSwapstoMakeStringsEqual.cpp
    ./source/1272_RemoveInterval.cpp
    ./source/1282_GroupthePeopleGiventheGroupSizeTheyBelongTo.cpp
    ./source/1283_SmallestDivGivenThreshold.cpp
    ./source/1306_JumpGameIII.cpp
    ./source/1345_JumpGameIV.cpp
    ./source/1379_FindACorrespondingNodeofaBinaryTreeinaCloneofThatTree.cpp
    ./source/1387_SortIntegersbyThePowerValue.cpp
    ./source/138_CopyListwithRandomPointer.cpp
    ./source/1457_PseudoPalindromicPathsinaBinaryTree.cpp
    ./source/146_LRUCache.cpp
    ./source/1485_CloneBinaryTreeWithRandomPointer.cpp
    ./source/1490_CloneN-aryTree.cpp
    ./source/1492_TheKthFactorofN.cpp
    ./source/1506_FindRootofNAryTree.cpp
    ./source/1539_KthMissingPositiveNumber.cpp
    ./source/155_MinStack.cpp
    ./source/1567_MaximumLengthofSubarrayWithPositiveProduct.cpp
    ./source/159_LongestSubstringwithAtMostTwoDistinctCharacters.cpp
    ./source/1602_FindNearestRightNodeinBinaryTree.cpp
    ./source/162_FindPeakElement.cpp
    ./source/1630_ArithmeticSubarrays.cpp
    ./source/163_MissingRanges.cpp
    ./source/1640_CheckArrayFormationThroughConcatenation.cpp
    ./source/1646_GetMaximuminGeneratedArray.cpp
    ./source/1658_MinimumOperationstoReduceXtoZero.cpp
    ./source/1662_CheckIfTwoStringArraysareEquivalent.cpp
    ./source/173_BinarySearchTreeIterator.cpp
    ./source/198_HouseRobber.cpp
    ./source/19_RemoveNthNodeFromEnd.cpp
    ./source/200_NumberOfIslands.cpp
    ./source/209_MinimumSizeSubarraySum.cpp
    ./source/213_HouseRobberII.cpp
    ./source/215_KthLargestElementinanArray.cpp
    ./source/21_MergeTwoSortedLists.cpp
    ./source/239_SlidingWindowMaximum.cpp
    ./source/23_MergeKSortedLists.cpp
    ./source/243_ShortestWordDistance.cpp
    ./source/24_SwapNodesinPairs.cpp
    ./source/251_Flatten2DVector.cpp
    ./source/261_GraphValidTree.cpp
    ./source/266_PalindromePermutation.cpp
    ./source/277_FindTheCelebrity.cpp
    ./source/289_GameofLife.cpp
    ./source/297_SerializeandDeserializeBinaryTree.cpp
    ./source/299_BullsAndCowGoogle.cpp
    ./source/2_AddTwoNumbers.cpp
    ./source/300_LongestIncreasingSubsequence.cpp
    ./source/312_BurstBalloons.cpp
    ./source/314_VerticalOrder.cpp
    ./source/31_NextPermutation.cpp
    ./source/323_NumberOfConnectedComponentsInAnUndirectedGraph.cpp
    ./source/325_MaximumSizeSubarraySumEqualsk.cpp
    ./source/329_LongestIncreasingPathinaMatrix.cpp
    ./source/334_IncreasingTripletSubsequence.cpp
    ./source/340_LongestSubstringwithAtMostKDistinctCharacters.cpp
    ./source/359_LoggerRateLimiter.cpp
    ./source/369_PlusOneLinkedList.cpp
    ./source/395_LongestSubstringwithAtLeastKRepeatingCharacters.cpp
    ./source/3_LongestSubstringWithoutRepeatingCharacters.cpp
    ./source/419_BattleshipsinaBoard.cpp
    ./source/41_FirstMissingPositive.cpp
    ./source/428_SerializeandDeserializeN-aryTree.cpp
    ./source/43_MultiplyStrings.cpp
    ./source/445_AddTwoNumsII.cpp
    ./source/454_4SumII.cpp
    ./source/46_Permutations.cpp
    ./source/487_MaxConsecutiveOnesII.cpp
    ./source/48_RotateImage.cpp
    ./source/50_PowXN.cpp
    ./source/526_BeautifulArrangement.cpp
    ./source/532_K-diffPairsinanArray.cpp
    ./source/54_SpiralMatrix.cpp
    ./source/55_JumpGame.cpp
    ./source/560_SubarraySumEqualsK.cpp
    ./source/563_BinaryTreeTilt.cpp
    ./source/567_PermutationinString.cpp
    ./source/56_MergeIntervals.cpp
    ./source/59_SpiralMatrixII.cpp
    ./source/643_MaximumAverageSubarrayI.cpp
    ./source/673_FindNumberOfLIS.cpp
    ./source/692_TopKFrequentWords.cpp
    ./source/718_MaximumLengthOfRepeatedSubarray.cpp
    ./source/76_MinimumWindowSubstring.cpp
    ./source/779_K-thSymbolinGrammar.cpp
    ./source/785_IsBipartite.cpp
    ./source/804_UniqueMorseCodeWords.cpp
    ./source/80_RemoveDuplicatesfromSortedArrayII.cpp
    ./source/82_RemoveDuplicatesfromSortedListII.cpp
    ./source/844_BackspaceStringCompare.cpp
    ./source/845_LongestMountainInArray.cpp
    ./source/84_LargestRectangleinHistogram.cpp
    ./source/865_SmallestSubtreewithalltheDeepestNodes.cpp
    ./source/881_BoatstoSavePeople.cpp
    ./source/885_SpiralMatrixIII.cpp
    ./source/897_IncreasingOrderSearchTree.cpp
    ./source/902_NumbersAtMostNGivenDigitSet.cpp
    ./source/91_DecodeWays.cpp
    ./source/921_MinimumAddtoMakeParenthesesValid.cpp
    ./source/938_RangeSumOfBST.cpp
    ./source/941_ValidMountainArray.cpp
    ./source/94_BinaryTreeInorderTraversal.cpp
    ./source/973_KClosestPointstoOrigin.cpp
    ./source/975_Google_OEJump.cpp
    ./source/977_SquaresofaSortedArray.cpp
    ./source/98_ValidateBinarySearchTree.cpp
    ./source/997_FindtheTownJudge.cpp
    ./source/OnlineTest_Finxflo.cpp
    ./source/Test1_Finxflo.cpp
    ./source/TestCase.cpp
    ./source/Utility.cpp
    ./source/main.cpp
    )

target_include_directories(${PROJECT} PRIVATE ./include)
